# ocr_project

./: .gitignore  README.md  config.json  pipeline_walkthrough.ipynb  pyproject.toml
scripts/: capture_test_image.py  deploy_rpi.sh  gas-meter-ocr.service  pick_roi.py  publish_readings.py
src/: capture.py  config.py  pipeline.py  preprocessing.py  preprocessing_v2.py  recognizer.py  roi_detector.py  segmenter.py  server.py
src/services/: gsheet.py  measurements.py
templates/: templates.npz
tests/: test_capture.py  test_config.py  test_gsheet.py  test_pipeline.py  test_preprocessing.py  test_recognizer.py  test_roi_detector.py  test_segmenter.py  test_server.py
tools/: build_templates.py
